# data.science

./: .gitignore  README.md
01-EDA/: README.md
01-EDA/Bank/: Untitled-1.ipynb  bank.ipynb
01-EDA/EDA_app/: .gitignore  README.md  callbacks.py  data_loader.py  eda_app.py  statistical_tests.py
01-EDA/Marketing/: marketing.ipynb  ~WRL0003.tmp
02-AB_Testing/: README.md  requirements.txt  word.docx
02-AB_Testing/app/: dashboard.py
02-AB_Testing/src/: data_loader.py  descriptive_stats.py  hypothesis_testing.py  parsers.py  robustness.py  segmentation.py  visualizations.py
02-AB_Testing/v1/: config.py  run.py
02-AB_Testing/v2/: CHANGELOG.md  config.py  requirements.txt  run.py
02-AB_Testing/v3/: run.py  (+1 more)
02-AB_Testing/v4/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements-prod.txt  requirements.txt  run.py  wsgi.py
02-AB_Testing/v4/app/: export_utils.py  layout.py  theme.py
02-AB_Testing/v4/app/callbacks/: analysis.py  export.py  tabs.py
02-AB_Testing/v4/app/charts/: __init__.py  bayesian_chart.py  ci_chart.py  conversion_chart.py  power_chart.py  segments_chart.py  trends_chart.py
02-AB_Testing/v4/app/components/: progress_bar.py
02-AB_Testing/v4/assets/: style.css
02-AB_Testing/v4/src/: bayesian_analysis.py  compute.py  confidence_score.py  data_cache.py  data_loader.py  descriptive_stats.py  effect_size.py  hypothesis_testing.py  logistic_regression.py  power_analysis.py  report_generator.py  robustness.py  segmentation.py  sprt.py  temporal_analysis.py
03-Clustering_Dimension_Reduction/: README.md
(+143 files in other folders)
